fixed incorrect display elements on mobile devices

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,9 +7,10 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: hidden; /* Enable scroll if needed */
-  background-color: var(--bg-darkshadow) a8; /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 .modal-window {
+  z-index: 4;
   min-height: 512px;
   box-shadow: -4px -4px 9px var(--bg-darkshadow);
 }
@@ -69,10 +70,11 @@
   margin: 0;
   background-color: var(--main-bg-color);
   color: var(--main-text-color);
-  box-shadow: -4px -4px 12px var(--bg-darkshadow),
-    4px 4px 12px var(--bg-lightshadow);
+  box-shadow: -4px 0px 10px var(--bg-darkshadow),
+    0px -4px 10px var(--bg-lightshadow);
   outline: none !important;
-  outline-style: none;
+  outline-style: none;  
+  border: 2px solid var(--style-text-color);
 }
 .icon-shadow {
   border-radius: 14px;
@@ -120,4 +122,16 @@
 .notice a:hover {
   color: var(--style-text-color) !important;
   text-decoration: underline !important;
+}
+
+.border-left-bottom {
+  border-bottom: 2px solid var(--style-text-color);
+  border-left: 2px solid var(--style-text-color);
+  border-top: 2px solid var(--main-bg-color);
+}
+
+.border-top-right-bottom {
+  border-bottom: 2px solid var(--style-text-color);
+  border-right: 2px solid var(--style-text-color);
+  border-top: 2px solid var(--style-text-color);
 }
